--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <h2 class="title">APPLY</h2>
         <div class="apply-container">
           <div class="qr-container">
-            <img src="/api/placeholder/200/200" alt="QR Code for Application" class="qr-code" id="apply-qr">
+            <img src="images/Google form AVL Sound.png" alt="QR Code for Application" class="qr-code" id="apply-qr">
             <p><small>Scan to apply</small></p>
           </div>
           <div class="apply-text">
@@ -427,7 +427,7 @@
       <div class="content-box">
         <h2 class="title">SYSTEMS</h2>
         <p>Our sound systems diagram showcases the interconnected nature of our audio ecosystem:</p>
-        <img src="/api/placeholder/700/500" alt="Systems Diagram" class="systems-diagram">
+        <img src="images/ChatGPT Image May 12, 2025 at 12_09_28 PM.png" alt="Systems Diagram" class="systems-diagram">
         <p>This comprehensive diagram illustrates how our various components interact to create immersive sonic experiences.</p>
       </div>
     </section>
@@ -523,7 +523,7 @@
       // Apply button functionality - update with your actual Google Form URL
       const applyButton = document.getElementById('apply-button');
       if (applyButton) {
-        applyButton.href = "https://forms.google.com/your-form-url"; // Replace with your Google Form URL
+        applyButton.href = "https://forms.gle/vnJzCuwzCzBxBVni6"; // Replace with your Google Form URL
       }
       
       // Lightbox functionality
