--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
       <div class="content-box">
         <h2 class="title">SYSTEMS</h2>
         <p>Our sound systems diagram showcases the interconnected nature of our audio ecosystem:</p>
-        <img src="Sound/images/ChatGPT Image May 12, 2025 at 12_09_28 PM.png" alt="Systems Diagram" class="systems-diagram">
+        <img src="images/ChatGPT Image May 12, 2025 at 12_09_28 PM.png" alt="Systems Diagram" class="systems-diagram">
         <p>This comprehensive diagram illustrates how our various components interact to create immersive sonic experiences.</p>
       </div>
     </section>
