--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <h2 class="title">APPLY</h2>
         <div class="apply-container">
           <div class="qr-container">
-            <img src="images/Google form AVL Sound.png" alt="QR Code for Application" class="qr-code" id="apply-qr">
+            <img src="images/avl-form.png" alt="QR Code for Application" class="qr-code" id="apply-qr">
             <p><small>Scan to apply</small></p>
           </div>
           <div class="apply-text">
