--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 <section id="systems" class="page page-3">
   <div class="content-box">
     <h2 class="title">Systems</h2>
-      <img src="your-image-path/systems-diagram.png" alt="Sound Systems Diagram" 
+      <img src="images/chatgpt-systems.png" alt="Sound Systems Diagram" 
         
     <!-- You can add tiered system details here if needed -->
   </div>
