Updated Photos and links.

--- a/index.html
+++ b/index.html
@@ -471,35 +471,35 @@
         <h3>Event Photos</h3>
         <div class="photo-grid">
           <div class="photo-item">
-            <img src="/api/placeholder/400/320" alt="Event Photo 1" data-full="/api/placeholder/800/600">
+            <img src="/images/worship1.jpg" alt="Event Photo 2" data-full="/images/worship1.jpg">
           </div>
           <div class="photo-item">
-            <img src="/api/placeholder/400/320" alt="Event Photo 2" data-full="/api/placeholder/800/600">
+            <img src="images/worship2.jpg" alt="Event Photo 2" data-full="images/worship2.jpg">
           </div>
           <div class="photo-item">
-            <img src="/api/placeholder/400/320" alt="Event Photo 3" data-full="/api/placeholder/800/600">
+            <img src="images/worship3.jpg" alt="Event Photo 3" data-full="images/worship3.jpg">
           </div>
           <div class="photo-item">
-            <img src="/api/placeholder/400/320" alt="Event Photo 4" data-full="/api/placeholder/800/600">
+            <img src="images/worship4.jpg" alt="Event Photo 4" data-full="images/worship4.jpg">
           </div>
           <div class="photo-item">
-            <img src="/api/placeholder/400/320" alt="Event Photo 5" data-full="/api/placeholder/800/600">
+            <img src="images/worship5.jpg" alt="Event Photo 5" data-full="images/worship5.jpg">
           </div>
           <div class="photo-item">
-            <img src="/api/placeholder/400/320" alt="Event Photo 6" data-full="/api/placeholder/800/600">
+            <img src="images/worship6.jpg" alt="Event Photo 6" data-full="images/worship6.jpg">
           </div>
         </div>
         
         <h3>Tutorial Videos</h3>
         <div class="video-grid">
           <div class="video-container">
-            <iframe src="about:blank" data-src="https://www.youtube.com/embed/placeholder1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="about:blank" data-src="https://www.youtube.com/embed/gY229cKESKo?si=Dc5UKvc_4_dAjcGW" title=" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="video-container">
-            <iframe src="about:blank" data-src="https://www.youtube.com/embed/placeholder2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="about:blank" data-src="https://www.youtube.com/embed/h7_T7GwtuZg?si=9DjgVcjnQwkK532w" title=" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="video-container">
-            <iframe src="about:blank" data-src="https://www.youtube.com/embed/placeholder3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="about:blank" data-src="https://www.youtube.com/embed/8KirbEAnbJI?si=vkLpScV7ijm-ZP8L" title=" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
